** The display filter engine now uses PCRE2 instead of GRegex (GLib bindings to the older end-of-life PCRE library).
   PCRE2 is compatible with PCRE so the user-visible changes should be minimal.
   Some exotic patterns may now be invalid and require rewriting.

* HTTP2 dissector now supports using fake headers to parse the DATAs of streams captured without first HEADERS frames of a long-lived stream (like
  gRPC streaming call which allows sending many request or response messages in one HTTP2 stream). User can specify fake headers according to the
  server port, stream id and direction of the long-lived stream that we start capturing packets after it is established.

* Mesh Connex (MCX) support in existing 802.11 packets.

* Capture Options dialog contains same configuration icon as Welcome Screen. It is possible to configure interface there.

// === Removed Features and Support

// === Removed Dissectors

=== New File Format Decoding Support

[commaize]
--
--

=== New Protocol Support

// Add one protocol per line between the -- delimiters in the format
// “Full protocol name (Abbreviation)”
// git log --oneline --diff-filter=A --stat v3.7.0rc0.. epan/dissectors plugins
[commaize]
--
Host IP Configuration Protocol (HICP)
Secure Host IP Configuration Protocol (SHICP)
Mesh Connex (MCX)
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

=== Major API Changes

* proto.h: The field display types "STR_ASCII" and "STR_UNICODE" were removed. Use "BASE_NONE" instead.

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages
