@@ -23,16 +23,10 @@
 #include <epan/proto.h>
 #include <wsutil/glib-compat.h>
 
-typedef struct {
-	const char* name;
-	gboolean usable;
-	char* repr;
-} fvt_cache_entry_t;
 
 static uat_t* dfilter_macro_uat = NULL;
 static dfilter_macro_t* macros = NULL;
 static guint num_macros;
-static GHashTable* fvt_cache = NULL;
 
 /* #define DUMP_DFILTER_MACRO */
 #ifdef DUMP_DFILTER_MACRO
@@ -42,51 +36,10 @@ void dump_dfilter_macro_t(const dfilter_macro_t *m, const char *function, const 
 #define DUMP_MACRO(m)
 #endif
 
-static gboolean fvt_cache_cb(proto_node * node, gpointer data _U_) {
-	field_info* finfo = PNODE_FINFO(node);
-	fvt_cache_entry_t* e;
-
-	if (!finfo) return FALSE;
-
-	if ((e = (fvt_cache_entry_t*)g_hash_table_lookup(fvt_cache,finfo->hfinfo->abbrev))) {
-		e->usable = FALSE;
-	} else {
-		switch (finfo->hfinfo->type) {
-			case FT_NONE:
-			case FT_PROTOCOL:
-				return FALSE;
-			default:
-				break;
-		}
-		char *repr = fvalue_to_string_repr(NULL, &(finfo->value), FTREPR_DFILTER, finfo->hfinfo->display);
-		if (repr) {
-			e = g_new(fvt_cache_entry_t,1);
-			e->name = finfo->hfinfo->abbrev;
-			e->repr = repr;
-			e->usable = TRUE;
-			g_hash_table_insert(fvt_cache,(void*)finfo->hfinfo->abbrev,e);
-		}
-	}
-	return FALSE;
-}
-
-static void dfilter_free_fvt_entry(gpointer v)
-{
-	fvt_cache_entry_t* e = (fvt_cache_entry_t*)v;
-	wmem_free(NULL, e->repr);
-	g_free(e);
-}
-
-void dfilter_macro_build_ftv_cache(void* tree_root) {
-	g_hash_table_remove_all(fvt_cache);
-	proto_tree_traverse_post_order((proto_tree *)tree_root, fvt_cache_cb, NULL);
-}
-
 static gchar* dfilter_macro_resolve(gchar* name, gchar** args, gchar** error) {
 	GString* text;
 	int argc = 0;
 	dfilter_macro_t* m = NULL;
-	fvt_cache_entry_t* e;
 	int* arg_pos_p;
 	gchar** parts;
 	gchar* ret;
@@ -101,20 +54,9 @@ static gchar* dfilter_macro_resolve(gchar* name, gchar** args, gchar** error) {
 	}
 
 	if (!m) {
-		if (fvt_cache &&
-		    (e = (fvt_cache_entry_t  *)g_hash_table_lookup(fvt_cache,name)) != NULL) {
-			if(e->usable) {
-				return wmem_strdup(NULL, e->repr);
-			} else {
-				if (error != NULL)
-					*error = g_strdup_printf("macro '%s' is unusable", name);
-				return NULL;
-			}
-		} else {
-			if (error != NULL)
-				*error = g_strdup_printf("macro '%s' does not exist", name);
-			return NULL;
-		}
+		if (error != NULL)
+			*error = g_strdup_printf("macro '%s' does not exist", name);
+		return NULL;
 	}
 
 	DUMP_MACRO(m);
@@ -205,6 +147,22 @@ static gchar* dfilter_macro_apply_recurse(const gchar* text, guint depth, gchar*
 			} case STARTING: {
 				switch (c) {
 					case '{': {
+						/* If the name has a dot it's a field reference,
+						 * and conversely if it doesn't have a dot it's a macro. */
+						const char *sep = r;
+						char cc;
+						while ((cc = *sep++) != '\0') {
+							if (cc == '.' || cc == ':' || cc == '}') {
+								break;
+							}
+						}
+						if (cc == '.') {
+							/* Field reference, preserve */
+							g_string_append(out,"${");
+							state = OUTSIDE;
+							break;
+						}
+
 						args = g_ptr_array_new();
 						arg = g_string_sized_new(32);
 						name = g_string_sized_new(32);
@@ -575,8 +533,6 @@ void dfilter_macro_init(void) {
 				    NULL, /* Note: This is set in macros_init () */
 				    NULL,
 				    uat_fields);
-
-	fvt_cache = g_hash_table_new_full(g_str_hash,g_str_equal, NULL, dfilter_free_fvt_entry);
 }
 
 void dfilter_macro_get_uat(uat_t **dfmu_ptr_ptr) {
@@ -680,7 +636,6 @@ void dump_dfilter_macro_t(const dfilter_macro_t *m, const char *function, const 
 
 void dfilter_macro_cleanup(void)
 {
-	g_hash_table_destroy(fvt_cache);
 }
 
 /*
