@@ -105,6 +105,14 @@ sttype_register_pointer(void)
 		NULL,
 		field_tostr
 	};
+	static sttype_t reference_type = {
+		STTYPE_REFERENCE,
+		"REFERENCE",
+		NULL,
+		NULL,
+		NULL,
+		field_tostr
+	};
 	static sttype_t fvalue_type = {
 		STTYPE_FVALUE,
 		"FVALUE",
@@ -131,6 +139,7 @@ sttype_register_pointer(void)
 	};
 
 	sttype_register(&field_type);
+	sttype_register(&reference_type);
 	sttype_register(&fvalue_type);
 	sttype_register(&pcre_type);
 	sttype_register(&charconst_type);
