@@ -236,6 +236,9 @@ typedef struct _fvalue_t {
 fvalue_t*
 fvalue_new(ftenum_t ftype);
 
+fvalue_t*
+fvalue_dup(fvalue_t *fv);
+
 void
 fvalue_init(fvalue_t *fv, ftenum_t ftype);
 
